hakubernetes/rook/cephcluster.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rook-ceph
---
