hakubernetes/rook/rook-ceph-ingress.yaml

# Ingress for dashboard
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rook-ceph-ingress
  namespace: rook-ceph
  annotations:
    kubernetes.io/ingress.class: "internal-nginx"
    nginx.ingress.kubernetes.io/secure-backends: "true"
spec:
  tls:
  - hosts:
    - cephdashboard-internalk8s.10010sh.cn
    secretName: universal-10010sh-cn-tls
  rules:
  - host: cephdashboard-internalk8s.10010sh.cn
    http:
      paths:
      - path: /
        backend:
          serviceName: rook-ceph-mgr-dashboard
          servicePort: 8443
